# HiddenMarkovModel

./: BackwardCalculator.cpp  BackwardCalculator.h  CMakeLists.txt  EmissionMatrix.cpp  EmissionMatrix.h  ForwardCalculator.cpp  ForwardCalculator.h  Matrix.h  NUCLEOTIDE.cpp  NUCLEOTIDE.h  PairHMM.cpp  PairHMM.h  STATE.cpp  STATE.h  TransitionMatrix.cpp  TransitionMatrix.h  ViterbiCalculator.cpp  ViterbiCalculator.h  main.cpp
